# blackjack.hs

./: README.md  blackjack.cabal
app/: Main.hs
src/: Blackjack.hs  Lib.hs  PlayingCards.hs
test/: Spec.hs
