name:                blackjack
version:             0.1.0.0
synopsis:            Simple Blackjack implementation in haskell
description:         Please see README.md
homepage:            http://github.com/spencerwi/blackjack.hs
license:             MIT
license-file:        LICENSE
author:              Spencer Williams
maintainer:          spencerwi@gmail.com
copyright:           2016 Spencer Williams
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Blackjack, PlayingCards
  build-depends:       base >= 4.7 && < 5
                     , random
                     , random-shuffle >= 0.0.3
  default-language:    Haskell2010

executable blackjack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blackjack
                     , random
  default-language:    Haskell2010

test-suite blackjack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blackjack
                     , hspec
                     , QuickCheck
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/spencerwi/blackjack.hs
